# notes-app

./: README.md  pyproject.toml
notes/: note.py  parser.py
notes/templates/: due-date.yaml  event.yaml  focus.yaml  gist.md  metric.yaml  note.md  prediction.yaml  task.yaml
tests/: test_notes.py  test_parsing.py
tests/data/date-parsing/data/2022/: 2022-05-03T00:22:58.845189-07:00-task.yaml  2022-05-03T00:25:56.215626-07:00-task.yaml
